<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/injectionloading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#e0000000">
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
        <TextView
            android:layout_below="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/injecting"/>
    </RelativeLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/slidemenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_menu_white_24dp" />

            <TextView
                android:id="@+id/bartitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/slidemenu"
                android:text="@string/app_name"
                android:textColor="@color/white" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/switchstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devicenotconnection"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/red"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/setsxosswitch"
        android:layout_below="@+id/switchstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:switchPadding="10dp"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:text=""/>
    <TextView
        android:id="@+id/sxtip"
        android:layout_below="@+id/setsxosswitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/sxtip"/>

        <RelativeLayout
            android:id="@+id/fileselection"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/sxtip"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:background="#E8E8E8">

            <TextView
                android:id="@+id/filepath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/filebtn"
                android:text="@string/filepathsrc" />

            <Button
                android:id="@+id/filebtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary"

                android:text="@string/filebtn"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/autoinjection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fileselection"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/autoinject"
            app:switchPadding="20dp" />


        <Button
            android:id="@+id/injection"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/autoinjection"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/injectiontxt"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/opengithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/injection"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/mygithub"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>